@@ -1,0 +1,72 @@
+#!/bin/sh
+#
+#
+
+unset prefix
+unset exec_prefix
+unset args
+
+usage()
+{
+	cat <<EOF
+Usage: xine-config [OPTIONS] [LIBRARIES]
+       DEPRECATED. Use pkg-config instead.
+Options:
+	[--prefix[=DIR]]
+	[--exec-prefix[=DIR]]
+	[--version]
+        [--libs]
+	[--acflags]
+	[--cflags]
+	[--plugindir]
+	[--datadir]
+	[--scriptdir]
+	[--localedir]
+	[--objcflags]
+EOF
+	exit $1
+}
+
+if test $# -eq 0; then
+	usage 1 1>&2
+fi
+
+while test $# -gt 0; do
+  case "$1" in
+  -*=*) optarg="${1#--*=}" ;;
+  *) optarg= ;;
+  esac
+
+  case "$1" in
+    --prefix=*)
+      prefix="$optarg"
+      if [ "$exec_prefix" = '' ]; then
+        exec_prefix="$optarg"
+      fi
+      ;;
+    --exec-prefix=*)
+      exec_prefix="$optarg"
+      ;;
+    --prefix|--exec-prefix)
+      ;;
+    --version)
+      args="$args${args+ }--modversion"
+      ;;
+    --cflags|--libs)
+      args="$args${args+ }$1"
+      ;;
+    --acflags|--plugindir|--datadir|--scriptdir|--localedir|--objcflags)
+      args="$args${args+ }--variable=${1#--}"
+      ;;
+    *)
+      usage 1 1>&2
+      ;;
+  esac
+  shift
+done
+
+echo 'xine-config is DEPRECATED. Use pkg-config instead.' >&2
+
+exec pkg-config "${prefix+--define-variable=prefix=}$prefix" \
+		"${exec_prefix+--define-variable=exc_prefix=}$exec_prefix" \
+		$args libxine
